# ramanchada-api

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pdf2knnquery.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  test-build-publish.yml  test.yml
app/: main.py
app/api/: process.py  tasks.py  templates.py  upload.py
app/config/: app_config.py  config.yaml
app/models/: models.py
app/services/: process_service.py  processing_spectra.py  template_service.py  upload_service.py
scripts/: dev_server.py
src/configs/: config.chemicals.yaml  config.enanomapper.yaml  config.plastic.yaml  config.spectra.yaml  config.yaml
src/rcapi/: kc.py  main.py
src/rcapi/api/: aop.py  convertor.py  download.py  hsds_dataset.py  info.py  mcp.py  process.py  query.py  tasks.py  templates.py  upload.py  utils.py
src/rcapi/config/: app_config.py  config.chemicals.yaml  config.yaml
src/rcapi/models/: models.py
src/rcapi/services/: aop_service.py  convertor_service.py  download_service.py  kc.py  process_service.py  processing_spectra.py  query_service.py  solr_query.py  standard_response.py  template_service.py  upload_service.py
tests/: test_aop_service.py  test_api.py  test_api_datasources.py  test_api_download.py  test_api_hsdsdataset.py  test_api_query.py  test_api_template.py  test_app_config.py  test_effectarray.py  test_mcp.py  test_query.py  test_roles.py  test_solr_docs_config.py  test_url_datasources.py
tests/resources/api/: dose_response_ambit.json  pdf2knnquery.txt  test-jwt-key.pem  test-token.txt
tests/resources/templates/: dose_response.json  dose_response_noname.json  raman.json
